# botmanager

./: .gitignore  BOT_MANAGER.code-workspace  alembic.ini  docker-compose.yml  test_agents_curl.sh  test_agents_full.py  test_agents_manual.py  test_fase5a_process.sh  test_fase5a_process.sh.bak
backend/: .env.example  Dockerfile  README.md  alembic.ini  check_metadata.py  check_models.py  check_status.py  create_admin.py  debug_robot.py  fix_db.py  pytest.ini  requirements.txt  seed.py  seed_data.py  seed_data_simple.py  test_models_integration.py  test_structure.py
backend/alembic/: env.py
backend/alembic/versions/: 161220251755_tags_jsonb.py  20251219_1930_2a7b5f6db1d6_complete_initial_schema.py  7a1f5f11d72a_initial_schema.py
backend/app/: __init__.py  main.py
backend/migrations/: env.py
backend/scripts/: test_fase5a_processes.sh
backend/tests/: conftest.py  conftest_old.py  test_agents.py  test_tenant_integration.py
docs/: Diagrama_UML.md  Guia_Integracao.md  Setup_Mac.md  resumo_executivo_fase5.md
frontend/: package-lock.json  tailwind.config.js
frontend/src/: App.jsx  auth.jsx  index.css
tests/: __init__.py  conftest.py  test_agents.py
worker/: .env.example  README.md  requirements.txt
worker/installer/: check_installation.ps1  install.ps1  uninstall.ps1  update.ps1
worker/ui/: build.ps1  dev.ps1
worker/ui/src-tauri/: Cargo.toml  build.ps1  tauri.conf.json
worker/ui/src-tauri/icons/: create_rgba_icon.py
worker/ui/src-tauri/src/: main.rs
worker/worker/: automation_runner.py  config.py  debug_worker.py  main.py  manager.py
(+66 files in other folders)
